fix symbol error

--- a/nb_graphics/vae.tex
+++ b/nb_graphics/vae.tex
@@ -40,11 +40,11 @@
     %\draw[thick] (\ce,-0.5) -- (\es,-0.5);
     %\draw[thick] (\ae,-0.5) -- (\cs,-0.5);
 
-    \node (p) at (6.5,4) {$q(z) \thicksim N(0,\mathrm I)$};
+    \node (p) at (6.5,4) {$p(z) \thicksim N(0,\mathrm I)$};
     \draw[->,thick] (p) -- (6.5,3);
     \node at (10.15,2.3) {$p_{\theta}(x|z)$};
     %\node[anchor=west] at (1,-1.4) {$\log p_\theta(x)=\log \int p_\theta(x|z)p(z)dz$};
-        \node at (5.15,2.3) {$q_{\psi}(z|x)$};
+        \node at (5.15,2.3) {$q_{\phi}(z|x)$};
     %\node[anchor=west] at (2.55,-2.0) {$> /\textrm{math}^{[1]}/ >  E_{q_{\psi}(z|x)}[\log p_\theta(x|z)]- D_{\mathrm{KL}}(q_{\psi}(z|x)||p(z))$};
 
     \end{tikzpicture}
